--- a/css/style_index.css
+++ b/css/style_index.css
@@ -5,7 +5,9 @@
     font-family: sans-serif;
     background-color: #050c14;
 }
-
+strong{
+    color: #57b7da;
+}
 a{
     display: inline;
     padding:10px;
@@ -99,7 +101,7 @@ li{
 .about{
     grid-area:about;
     padding:80px;
-    justify-self: center;
+    justify-self: justify;
 }
 .container{
     grid-area:container;
