--- a/css/style_consult.css
+++ b/css/style_consult.css
@@ -9,6 +9,11 @@
 body{
     line-height: 2em;
 }
+strong{
+
+        color: #57b7da;
+
+}
 #main-header{
     font-size: 50px;
 }
@@ -21,6 +26,7 @@ h2{
     margin: 30px;
     font-size: 25px;
     text-align: center;
+    color: #57b7da;
 }
 h3{
     diplay: grid;
@@ -48,6 +54,7 @@ a{
 
 section{
     margin: 20px;
+    border: 1px #57b7da solid;
 }
 .grid{
     display: grid;
@@ -135,4 +142,10 @@ section{
 .content-4{
     grid-area: content-4;
     padding: 50px;
+}
+
+
+.info{
+    border: none;
+    margin: 30px;
 }
