--- a/css/style_consult.css
+++ b/css/style_consult.css
@@ -37,9 +37,11 @@ h3{
 
 }
 h4{
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     margin: 30px;
+    color: #172a45;
+
 }
 li{
     display:inline;
@@ -70,7 +72,7 @@ section{
     grid-area: header;
     font-size: 30px;
     justify-self: center;
-    padding: 190px;
+    padding: 180px;
     margin: 20px;
 }
 .navbar{
