--- a/portfolio_joshua_welsh/core/templates/core/consulting.html
+++ b/portfolio_joshua_welsh/core/templates/core/consulting.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    {% load static %}
+    <meta charset="UTF-8">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZVRTWX86P"></script>
     <script>
@@ -10,12 +13,12 @@
 
         gtag('config', 'G-VZVRTWX86P');
     </script>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/style_consult.css">
+    <link rel="stylesheet" href="{% static 'core/css/style_consult.css'  %}">
     <title>Josh - Consulting</title>
 </head>
+
 <body>
     <div class="grid">
         <div class="header">
@@ -26,11 +29,10 @@
                 <a href="https://github.com/joshjwelsh" class="github">joshjwelsh</a>
             </li>
             <li class="code">
-                <a class="side"
-                href="code.html">Code</a>
+                <a class="side" href="{% url 'code' %}>Code</a>
             </li>
             <li class="home">
-                <a class="side" href="index.html">Home</a>
+                <a class="side" href="{% url 'index' %}">Home</a>
             </li>
             <li class="contact">
                 <a class="side" href="#">Contact</a>
@@ -38,11 +40,12 @@
         </div>
         <div class="content">
             <section class="info">
-                <h4>README.txt</h4>
+                <h4>README.md</h4>
                 <p>I offer individuals and small business specialized software solutions such as
                     websites, data aggregation, web scraping and automation tools.
                     The first consulting meeting is free of charge. If the software solution you desire cannot be
-                    completed or the solution is outside my scope. I will recommend an engineer better suited and a <strong>full refund</strong>.
+                    completed or the solution is outside my scope. I will recommend an engineer better suited and a
+                    <strong>full refund</strong>.
                 </p>
             </section>
             <section class="content-1">
@@ -50,7 +53,9 @@
                     <h2>Data Aggregation</h2>
                 </header>
                 <p>
-                    Data aggregation is the process of gathering data and presenting it in a summarized format. The data may be gathered from multiple data sources with the intent of combining these data sources into a summary for analysis.
+                    Data aggregation is the process of gathering data and presenting it in a summarized format. The data
+                    may be gathered from multiple data sources with the intent of combining these data sources into a
+                    summary for analysis.
                     By using data and modern technology data aggregation allows you to find competitive prices
                 </p>
                 <p>
@@ -62,8 +67,11 @@
                     <h2>Web Design</h2>
                 </header>
                 <p>
-                    In the modern world, the only way to compete with massive companies like Amazon is to make it as easy and convenient for users to purchase items from your website. With the help from my design partner
-                    <strong><a href="https://talonsmith.myportfolio.com/">Talon Smith</a></strong> we will build a responsive, well-designed website or web apps for your personal or business needs.
+                    In the modern world, the only way to compete with massive companies like Amazon is to make it as
+                    easy and convenient for users to purchase items from your website. With the help from my design
+                    partner
+                    <strong><a href="https://talonsmith.myportfolio.com/">Talon Smith</a></strong> we will build a
+                    responsive, well-designed website or web apps for your personal or business needs.
                 </p>
                 <p>
                     Rate: $40/hr
@@ -74,8 +82,10 @@
                     <h2>Web Scraping</h2>
                 </header>
                 <p>
-                    Web scraping refers to the extraction of data from a website. This information is collected and then exported into a format that is more useful for you to work with. For example: gathering stock images from a websites or
-                     scraping a website for reviews of a product.
+                    Web scraping refers to the extraction of data from a website. This information is collected and then
+                    exported into a format that is more useful for you to work with. For example: gathering stock images
+                    from a websites or
+                    scraping a website for reviews of a product.
                 </p>
                 <p>
                     Rate: $40/hr
@@ -86,8 +96,9 @@
                     <h2>Automation Tools</h2>
                 </header>
                 <p>
-                    Automation tools are tools that help you to increase your productivity in your day to day. Some examples of automations tools are:
-                     automated email replies, sorting or organizing computer files, unit-testing a website, and more.
+                    Automation tools are tools that help you to increase your productivity in your day to day. Some
+                    examples of automations tools are:
+                    automated email replies, sorting or organizing computer files, unit-testing a website, and more.
                 </p>
                 <p>
                     Rate: $40/hr
@@ -100,4 +111,5 @@
         </div>
     </div>
 </body>
+
 </html>
