--- a/portfolio_joshua_welsh/core/templates/core/home.html
+++ b/portfolio_joshua_welsh/core/templates/core/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    {% load static %}
+    <meta charset="UTF-8">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZVRTWX86P"></script>
     <script>
@@ -10,41 +13,50 @@
 
         gtag('config', 'G-VZVRTWX86P');
     </script>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/style_index.css">
+    <link rel="stylesheet" type='text/css' href="{% static 'core/css/style_index.css' %}" >
     <title>joshwelsh</title>
 </head>
+
 <body>
     <div class="grid">
         <div class="header">
+            {% load static %}
             <a href="https://github.com/joshjwelsh" class="github">joshjwelsh</a>
-            <a class="side" href="code.html">code</a>
-            <a class="side" href="#">blog</a>
-            <a class="side" href="consulting.html">consulting</a>
+            <a class="side" href="{% url 'code' %}">code</a>
+            <a class="side" href="{% url 'blog-home' %}">blog</a>
+            <a class="side" href="{% url 'consulting' %}">consulting</a>
         </div>
         <div class="content">
             <header class="main-header">
                 <p>Hi, my name is</p>
                 <h1 id="head">Joshua Welsh.</h1>
                 <h3>I am a Software Engineer.</h3>
-                <a href="" id="email">joshjwelsh@engineer.com</a>
+                <a href="https://drive.google.com/file/d/19fNFmGqJ5UUQSvxvruSiTQBHFPPLq6tV/view?usp=sharing" id="my_container">CV</a>
+
+                <a href="" id="my_container">joshjwelsh@engineer.com</a>
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side"> I grew up in Trinidad and Tobago, and came to Miami, Florida in 2018 to attend the <strong class="strong-text">University of Miami</strong>. At university I
-                study computer science, mathematics and economics.</p>
+                <p class="side"> I grew up in Trinidad and Tobago, and came to Miami, Florida in 2018 to attend the
+                    <strong class="strong-text">University of Miami</strong>. At university I
+                    study computer science, mathematics and economics.</p>
                 <br>
-                <p class="side">Over the years, programming has become a bigger part of my life. Currently my interests lie in the fields of <strong class="strong-text">data science</strong> and <strong class="strong-text">full stack development</strong>.</p>
+                <p class="side">Over the years, programming has become a bigger part of my life. Currently my interests
+                    lie in the fields of <strong class="strong-text">data science</strong> and <strong
+                        class="strong-text">full stack development</strong>.</p>
                 <br>
-                <p>I don't only design, build and implement software, I am a member of the fraternity <strong class="strong-text">Sigma Alpha Mu</strong>, and my interests outside of coding are gaming, sports and reading.</p>
+                <p>I don't only design, build and implement software, I am a member of the fraternity <strong
+                        class="strong-text">Sigma Alpha Mu</strong>, and my interests outside of coding are gaming,
+                    sports and reading.</p>
             </section>
             <section class="container">
                 <ul id="list-1">
                     <h2>Languages</h2>
                     <li>Python</li>
-                    <li>C++ and C</li>
+                    <li>C/C++</li>
+                    <li>Golang</li>
+                    <li>Javascript</li>
                     <li>Java</li>
                     <li>HTML/CSS</li>
                     <li>SQL</li>
@@ -53,9 +65,12 @@
                     <h2>Frameworks</h2>
                     <li>Pandas</li>
                     <li>Django/Flask</li>
+                    <li>React</li>
                     <li>Scrapy</li>
                     <li>Matplotlib</li>
+                    <li>Seaborn</li>
                     <li>OpenCV</li>
+                    
 
                 </ul>
             </section>
@@ -65,4 +80,5 @@
         </div>
     </div>
 </body>
+
 </html>
